--- a/ja/index.html
+++ b/ja/index.html
@@ -64,6 +64,6 @@ body {
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/
 <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
-(<a href=IchigoJam-print.pdf>一括ダウンロードPDF</a>)<br>
+(<a href=http://ichigojam.net/print/IchigoJam-print.pdf>一括ダウンロードPDF</a>)<br>
 </div>
 </body></html>
