--- a/en/BEEP.html
+++ b/en/BEEP.html
@@ -26,7 +26,7 @@ Let's make a rhythm!
 <div id="list4"></div><script>make15("list4", "10 BEEP 5:WAIT 30\n20 BEEP 20:WAIT 30\n30 GOTO 10\nRUN")</script>
 WAIT is the command to wait. A slow rhythm if you put it a big number. GOTO is the command to go back to the line 10 to repeat. [ESC] key to stap.
 </section><section>
-The rhythm will stop while pushing the button of your IchigoJam.<br>
+The rhythm will stop while pressing the button of your IchigoJam.<br>
 <div id="list5"></div><script>make15("list5", "15 IF BTN() GOTO 15")</script>
 </section>
 
