--- a/en/PLAY.html
+++ b/en/PLAY.html
@@ -15,16 +15,16 @@ Did you hear the sounds Do-re-mi?
 <section>
 Do-re-mi-fa-so-la-ti are CDEFGAB
 <div id="play1-2"></div><script>make15("play1-2", "PLAY\"CDEFGAB\"")</script>
-Height of soound, octave can be changed by the "O" of alphabet and the number.
+The octave (=height of soound) can be changed by the "O" and the number.
 <div id="play1-3"></div><script>make15("play1-3", "PLAY\"O4 CDEFGAB O5 C\"")</script>
 You can change the length of tone the tone alphabet with the number.
 <div id="play1-4"></div><script>make15("play1-4", "PLAY\"CDE2\"")</script>
-"2" of "CDE2" means a 2 tone length. With default setting 4 tone length. The length of 8 tone length is a half of 4 tone length.<br>
-To raise a half using "#", decrese a half uisng "-"<br>
+"2" of "CDE2" means a two-part note. Default setting is quartet note. "8" means eighth note that tone length is a half of quartet note.<br>
+"#" to raise the tone a semitone, "-" to lower the tone a semitone.<br>
 <div id="play1-5"></div><script>make15("play1-5", "PLAY\"C C# F-\"")</script>
-R means silence. You can change the length of tones using the nunmber sunch this "R2".
+"R" means silence. You can change the length of tones using the nunmber sunch this "R2" alse.
 <div id="play1-6"></div><script>make15("play1-6", "PLAY\"CRC\"")</script>
-T means to set up the tempo. Default setting T120 is 120 tones with the 4 length per second.
+"T" means to set up the tempo. Default setting "T120" means 120 quartet note per second.
 <div id="play1-7"></div><script>make15("play1-7", "PLAY\"T240 CDE2 CDE2 GEDCDED2\"")</script>
 </section>
 
