mod path of lib/css

--- a/ja/UART.html
+++ b/ja/UART.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>パソコンをのっとるUART（ユーアート） - IchigoJam</title>
-<link rel="stylesheet" type="text/css" href="http://fukuno.jig.jp/app/IchigoJam/ichigojamlist.css">
-<script src=http://fukuno.jig.jp/app/IchigoJam/ichigojamlist.js></script>
+<link rel="stylesheet" type="text/css" href="ichigojamlist.css">
+<script src="ichigojamlist.js"></script>
 </head><body>
 
 <h1>パソコンをのっとるUART（ユーアート）</h1>
