--- a/ja/FLOWERLED.html
+++ b/ja/FLOWERLED.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>おはなLEDでルーレットゲーム</title>
-<link rel="stylesheet" type="text/css" href="http://ichigojam.net/print/ichigojamlist.css">
-<script src=http://fukuno.jig.jp/app/IchigoJam/ichigojamlist.js></script>
+<link rel="stylesheet" type="text/css" href="ichigojamlist.css">
+<script src="ichigojamlist.js"></script>
 </head><body>
 
 <h1>おはなLEDでルーレットゲーム</h1>
