--- a/ja/LOCATE.html
+++ b/ja/LOCATE.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>ばしょをあやつるLOCATE（ロケイト） - IchigoJam</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
-<script src=ichigojamlist.js></script>
+<script src="ichigojamlist.js"></script>
 </head><body>
 
 <h1>ばしょをあやつるLOCATE（ロケイト）</h1>
