--- a/ja/index.html
+++ b/ja/index.html
@@ -58,6 +58,7 @@ body {
 - <a href=JINKOSIM.html>じんこうシミュレーション</a><br>
 - <a href=TOUCHTYPING.html>タッチタイピング</a><br>
 - <a href=NINEPUZZLE.html>ナインパズル</a><br>
+- <a href=GACHA.html>ガチャシミュレーション</a><br>
 - <a href=VISUAL-KUKU.html>九九ゲーム</a><br>
 </section>
 </div>
