--- a/en/index.html
+++ b/en/index.html
@@ -35,6 +35,7 @@ Programming course<br>
 -->
 - <a href=BEEP.html>Make Sounds / BEEP</a><br>
 - <a href=PLAY.html>Compose Music / PLAY</a><br>
+- <a href=FOR.html>Multiplication by loop / FOR/NEXT</a><br>
 <!--
 - <a href=PRINT.html>けいさんさせる PRINT</a><br>
 - <a href=LOCATE.html>ばしょをあやつる LOCATE</a><br>
