--- a/ja/LET.html
+++ b/ja/LET.html
@@ -19,6 +19,8 @@ OKとでたら、きおくかんりょう！
 <div id="list3"></div><script>make15("list3", "LET B,2017\n?B")</script>
 かずには、へんすうもつかえます
 <div id="list3-2"></div><script>make15("list3-2", "LET C,A+B\n?C\nLET C,C+1\n?C")</script>
+「=（イコール」きごうをつかって、みじかくかくこともできます。
+<div id="list3-3"></div><script>make15("list3-3", "C=C+1")</script>
 </section>
 
 <section>
