--- a/ja/index.html
+++ b/ja/index.html
@@ -38,7 +38,14 @@ body {
 - <a href=RND.html>サイコロをつくる RND</a><br>
 - <a href=TICK.html>ストップウォッチをつくる TICK</a><br>
 - <a href=LET.html>かずをきおくるする LET</a><br>
+- <a href=FOR.html>くりかえしでかけざん FOR/NEXT</a><br>
 - <a href=BIN.html>2しんすうをたしなむ BIN$</a><br>
+</section>
+
+<section>
+さんすう コース<br>
+- <a href=MATH1.html>こうばいすうさがし</a><br>
+- <a href=MATH2.html>こうやくすうさがし</a><br>
 </section>
 
 <section>
