--- a/ja/PRINT.html
+++ b/ja/PRINT.html
@@ -10,8 +10,8 @@
 けいさんがとくいなコンピューターに、もんだいをだしてみよう！<br>
 していされたものをひょうじするPRINT（プリント）コマンドをつかいます。
 <div id="print1-1"></div><script>make15("print1-1", "PRINT 1+1")</script>
-エンターキーで「2」とそくざにこたえがかえってきます
-<div id="print1-2"></div><script>make15("print1-2", "PRINT 20+7")</script>
+エンターキーで「2」とすぐにこたえてくれます
+<div id="print1-2"></div><script>make15("print1-2", "PRINT 15-7")</script>
 ひきざんだってできます！
 </section>
 
