--- a/ja/index.html
+++ b/ja/index.html
@@ -44,8 +44,9 @@ body {
 
 <section>
 さんすう コース<br>
-- <a href=MATH1.html>こうばいすうさがし</a><br>
-- <a href=MATH2.html>こうやくすうさがし</a><br>
+- <a href=ADD.html>1から100までたす</a><br>
+- <a href=MATH1.html#kana>こうばいすうさがし</a>（<a href=MATH1.html>漢字版</a>）<br>
+- <a href=MATH2.html#kana>こうやくすうさがし</a>（<a href=MATH2.html>漢字版</a>）<br>
 </section>
 
 <section>
