--- a/ja/index.html
+++ b/ja/index.html
@@ -40,6 +40,7 @@ body {
 - <a href=LET.html>かずをきおくるする LET</a><br>
 - <a href=FOR.html>くりかえしでかけざん FOR/NEXT</a><br>
 - <a href=BIN.html>2しんすうをたしなむ BIN$</a><br>
+- <a href=PCG.html>オリジナルキャラをつくる PCG</a><br>
 </section>
 
 <section>
