--- a/ja/index.html
+++ b/ja/index.html
@@ -48,6 +48,7 @@ body {
 - <a href=ADD.html>1から100までたす</a><br>
 - <a href=MATH1.html#kana>こうばいすうさがし</a>（<a href=MATH1.html>漢字版</a>）<br>
 - <a href=MATH2.html#kana>こうやくすうさがし</a>（<a href=MATH2.html>漢字版</a>）<br>
+- <a href=LOGIC.html>1たす1は1、ろんりのなぞ</a><br>
 </section>
 
 <section>
