--- a/ja/LOGIC.html
+++ b/ja/LOGIC.html
@@ -40,7 +40,7 @@
 </section>
 
 <section>
-「ろんり」のけいさんは、いちどにさいだい16コまとめてけいさんできちゃいます！
+「ろんり」のけいさんは、さいだい16コまとめてけいさんできちゃいます！
 <div id="logic-4"></div><script>make15("logic-4", f2s(function() {/*
 ?BIN$(`1010|`0011,4)
 1011
