--- a/ja/index.html
+++ b/ja/index.html
@@ -52,6 +52,11 @@ body {
 </section>
 
 <section>
+えいご コース<br>
+- <a href=ENGNUM.html>えいごのかずをマスターしよう</a><br>
+</section>
+
+<section>
 でんしこうさく コース<br>
 - <a href=OUT.html>はじめてのかいろ OUT</a><br>
 - <a href=SIGNAL.html>ほこうしゃしんごうをつくる</a><br>
