--- a/ja/index.html
+++ b/ja/index.html
@@ -64,6 +64,7 @@ body {
 - <a href=CHAT.html>2だいつないでチャットしよう</a><br>
 - <a href=CHOCO.html>Ichigoチョコでめいろだっしゅつ</a><br>
 - <a href=FLOWERLED.html>おはなLEDでルーレットゲーム</a><br>
+- <a href=WS2812B.html>WS2812Bでいろあそび</a><br>
 </section>
 
 <section>
