--- a/ja/index.html
+++ b/ja/index.html
@@ -65,6 +65,7 @@ body {
 - <a href=CHOCO.html>Ichigoチョコでめいろだっしゅつ</a><br>
 - <a href=FLOWERLED.html>おはなLEDでルーレットゲーム</a><br>
 - <a href=WS2812B.html>WS2812Bでいろあそび</a><br>
+- <a href=PL9823.html>PL9823でいろあそび</a><br>
 </section>
 
 <section>
