--- a/en/index.html
+++ b/en/index.html
@@ -46,16 +46,18 @@ Programming course<br>
 -->
 </section>
 
-<!--
 <section>
 Ele-making course<br>
+<!--
 - <a href=OUT.html>はじめてのかいろ OUT</a><br>
 - <a href=SIGNAL.html>ほこうしゃしんごうをつくる</a><br>
 - <a href=PWM.html>サーボをあやつる PWM</a><br>
 - <a href=FLOWERLED.html>おはなLEDでルーレットゲーム</a><br>
-- <a href=CHAT.html>2だいつないでチャットしよう</a><br>
+-->
+- <a href=CHAT.html>Let's chat on a network!</a><br>
 </section>
 
+<!--
 <section>
 じっくりうちこみ コース<br>
 - <a href=KAWAKUDARI.html>かわくだりゲーム</a><br>
@@ -70,6 +72,11 @@ Ele-making course<br>
 
 </div>
 
-<div id="credit"><a href=https://github.com/IchigoJam/print>CC BY on GitHub</a> <a href="https://ichigojam.github.io/print/en/">IchigoJam print</a> https://ichigojam.github.io/print/en/ <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
+<div id="credit">
+<a href="https://ichigojam.github.io/print/en/">IchigoJam print @en</a> https://ichigojam.github.io/print/en/ <br>
+日本語: <a href="https://ichigojam.github.io/print/ja/">IchigoJam print @ja</a> https://ichigojam.github.io/print/ja/ <br>
+licence: <a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
+Src: <a href=https://github.com/IchigoJam/print>IchigoJam print on GitHub</a><br>
 </div>
+
 </body></html>
