--- a/ja/index.html
+++ b/ja/index.html
@@ -81,8 +81,13 @@ body {
 </section>
 </div>
 
-<div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/
-<a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
-(<a href=http://ichigojam.net/print/IchigoJam-print.pdf>一括ダウンロードPDF</a>)<br>
+<div id="credit">
+<a href="https://ichigojam.github.io/print/en/">IchigoJam print @en</a> https://ichigojam.github.io/print/en/ <br>
+日本語: <a href="https://ichigojam.github.io/print/ja/">IchigoJam print @ja</a> https://ichigojam.github.io/print/ja/ <br>
+licence: <a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
+Src: <a href=https://github.com/IchigoJam/print>IchigoJam print on GitHub</a><br>
 </div>
+
+(<a href=http://ichigojam.net/print/IchigoJam-print.pdf>一括ダウンロードPDF</a>)<br>
+
 </body></html>
