--- a/en/index.html
+++ b/en/index.html
@@ -24,9 +24,9 @@ body {
 <div id="main">
 <section>
 Programming course<br>
+- <a href=LED.html>Light up / LED</a><br>
 <!--
-- <a href=LED.html>ひかりをあやつる LED</a><br>
-- <a href=WAIT.html>じかんをあやつる WAIT</a><br>
+- <a href=WAIT.html>Control the time, WAIT</a><br>
 - <a href=RUN-LIST.html>プログラムのきおく RUN/LIST</a><br>
 - <a href=SAVE-LOAD-NEW.html>プログラムのほぞん SAVE/LOAD/NEW</a><br>
 - <a href=GOTO.html>よるのしんごうをつくる GOTO</a><br>
