--- a/en/index.html
+++ b/en/index.html
@@ -36,6 +36,7 @@ Programming course<br>
 - <a href=BEEP.html>Make Sounds / BEEP</a><br>
 - <a href=PLAY.html>Compose Music / PLAY</a><br>
 - <a href=FOR.html>Multiplication by loop / FOR/NEXT</a><br>
+
 <!--
 - <a href=PRINT.html>けいさんさせる PRINT</a><br>
 - <a href=LOCATE.html>ばしょをあやつる LOCATE</a><br>
@@ -57,9 +58,10 @@ Ele-making course<br>
 - <a href=CHAT.html>Let's chat on a network!</a><br>
 </section>
 
-<!--
 <section>
-じっくりうちこみ コース<br>
+Application course<br>
+- <a href=NUMQ.html>Number Quiz</a><br>
+<!--
 - <a href=KAWAKUDARI.html>かわくだりゲーム</a><br>
 - <a href=JANKEN.html>ジャンケンゲーム</a><br>
 - <a href=NEKONIKOBAN.html>ねこにこばんゲーム</a><br>
@@ -67,8 +69,8 @@ Ele-making course<br>
 - <a href=TOUCHTYPING.html>タッチタイピング</a><br>
 - <a href=NINEPUZZLE.html>ナインパズル</a><br>
 - <a href=VISUAL-KUKU.html>九九ゲーム</a><br>
-</section>
 -->
+</section>
 
 </div>
 
