add about WS2812B

--- a/ja/WS2812B.html
+++ b/ja/WS2812B.html
@@ -13,13 +13,14 @@ WS2812BはコンピューターつきのフルカラーLED。<br>
 10 POKE #700,240,181,114,182,64,24,80,33,9,2,1,49,9,4,4,136,1,48,128,37,1,48,3,120,255,34,74,96,3,39,10,38,43,66,1,208,10,39,3,38
 20 POKE #728,1,63,253,209,0,34,74,96,1,62,253,209,109,8,239,209,1,60,234,209,98,182,240,189
 */}))</script>
-まちがえていると、とまってしまうので、SAVEしてからRUNがオススメ！
+まちがえていると、とまってしまうので、SAVEしておこう
 </section>
 
 <section>
 1つ、あかくひからせてみよう！
 <div id="ws2812b-1"></div><script>make15("ws2812b-1", f2s(function() {/*
-POKE#800,3,0,0,10,0:?USR(#700,#800)
+200 POKE#800,3,0,0,10,0:?USR(#700,#800)
+RUN
 */}))</script>
 みどり
 <div id="ws2812b-2"></div><script>make15("ws2812b-2", f2s(function() {/*
@@ -34,8 +35,7 @@ POKE#802,0,0,10:?USR(#700,#800)
 <section>
 3つまとめてみどりいろにひからせよう
 <div id="ws2812b-4"></div><script>make15("ws2812b-4", f2s(function() {/*
-R=0:G=10:B=0
-POKE#800,3*3,0,G,R,B,G,R,B,G,R,B:U=USR(#700,#800)
+R=0:G=10:B=0:POKE#800,3*3,0,G,R,B,G,R,B,G,R,B:U=USR(#700,#800)
 */}))</script>
 2つひからせるときは3*3を3*2にして、R,G,Bは2セットでOK!
 </section>
