--- a/ja/index.html
+++ b/ja/index.html
@@ -64,8 +64,10 @@ body {
 - <a href=CHAT.html>2だいつないでチャットしよう</a><br>
 - <a href=CHOCO.html>Ichigoチョコでめいろだっしゅつ</a><br>
 - <a href=FLOWERLED.html>おはなLEDでルーレットゲーム</a><br>
-- <a href=WS2812B.html>WS2812Bでいろあそび</a><br>
 - <a href=PL9823.html>PL9823でいろあそび</a><br>
+- <a href=WS2812B.html>WS2812Bでいろあそび</a><br>
+- <a href=KIRAKIRA.html>きらきらしよう WS2812Bつづき1</a><br>
+- <a href=RAINBOW.html>にじをつくろう WS2812Bつづき2</a><br>
 </section>
 
 <section>
@@ -78,6 +80,7 @@ body {
 - <a href=NINEPUZZLE.html>ナインパズル</a><br>
 - <a href=GACHA.html>ガチャシミュレーション</a><br>
 - <a href=VISUAL-KUKU.html>九九ゲーム</a><br>
+- <a href=NUMTYPE.html>すうじタイピングゲーム</a><br>
 </section>
 </div>
 
