--- a/ja/index.html
+++ b/ja/index.html
@@ -42,6 +42,7 @@ body {
 - <a href=BIN.html>2しんすうをたしなむ BIN$</a><br>
 - <a href=PCG.html>オリジナルキャラをつくる PCG</a><br>
 - <a href=LOGIC.html>1たす1は1、ろんりのなぞ</a><br>
+- <a href=LRUN.html>プログラムをつなげる LRUN</a><br>
 </section>
 
 <section>
