--- a/ja/index.html
+++ b/ja/index.html
@@ -48,6 +48,7 @@ body {
 <section>
 さんすう コース<br>
 - <a href=ADD.html>1から100までたす</a><br>
+- <a href=MOD.html>じかんわりづくりとあまり</a><br>
 - <a href=MATH1.html#kana>こうばいすうさがし</a>（<a href=MATH1.html>公倍数さがし</a>）<br>
 - <a href=MATH2.html#kana>こうやくすうさがし</a>（<a href=MATH2.html>公約数さがし</a>）<br>
 - <a href=MATH3.html#kana>ししゃごにゅう</a>（<a href=MATH3.html>四捨五入</a>）<br>
