--- a/ja/WS2812B.html
+++ b/ja/WS2812B.html
@@ -10,34 +10,34 @@
 WS2812BはコンピューターつきのフルカラーLED。<br>
 5VをIchigoJamのVCC、DIをIchigoJamのOUT1、GNDをIchigoJamのGNDにつないだら、つぎのマシンごをうちこもう
 <div id="ws2812b-0"></div><script>make15("ws2812b-0", f2s(function() {/*
-10 POKE #700,240,181,114,182,64,24,80,33,9,2,1,49,9,4,4,136,1,48,128,37,1,48,3,120,255,34,74,96,3,39,10,38,43,66,1,208,10,39,3,38
-20 POKE #728,1,63,253,209,0,34,74,96,1,62,253,209,109,8,239,209,1,60,234,209,98,182,240,189
+10 POKE#700,102,32,240,181,114,182,8,36,36,2,9,25,11,76,128,37,11,120,255,34,34,96,3,39,10,38,43,66,1,208,10,39,3,38,1,63,253,209,0,34
+20 POKE#728,34,96,1,62,253,209,109,8,239,209,2,49,1,56,234,209,98,182,240,189,4,0,1,80
 */}))</script>
 まちがえていると、とまってしまうので、SAVEしておこう
 </section>
 
 <section>
-1つ、あかくひからせてみよう！
+1つ、あかくひからせてみよう！（ばんごうつきのへんすう、はいれつ）
 <div id="ws2812b-1"></div><script>make15("ws2812b-1", f2s(function() {/*
-200 POKE#800,3,0,0,10,0:?USR(#700,#800)
+200 [1]=10:?USR(#700,0)
 RUN
 */}))</script>
 みどり
 <div id="ws2812b-2"></div><script>make15("ws2812b-2", f2s(function() {/*
-POKE#802,10,0,0:?USR(#700,#800)
+[0]=10:[1]=0:[2]=0:?USR(#700,0)
 */}))</script>
-あお
+あお（LETコマンドで3つまとめてセットできる！）
 <div id="ws2812b-3"></div><script>make15("ws2812b-3", f2s(function() {/*
-POKE#802,0,0,10:?USR(#700,#800)
+LET[0],0,0,10:?USR(#700,0)
 */}))</script>
 </section>
 
 <section>
 3つまとめてみどりいろにひからせよう
 <div id="ws2812b-4"></div><script>make15("ws2812b-4", f2s(function() {/*
-R=0:G=10:B=0:POKE#800,3*3,0,G,R,B,G,R,B,G,R,B:U=USR(#700,#800)
+R=0:G=10:B=0:LET[0],G,R,B,G,R,B,G,R,B:U=USR(#700,0)
 */}))</script>
-2つひからせるときは3*3を3*2にして、R,G,Bは2セットでOK!
+さいだい34コまでひからせることができるよ！
 </section>
 
 <section>
