--- a/ja/index.html
+++ b/ja/index.html
@@ -38,6 +38,7 @@ body {
 - <a href=RND.html>サイコロをつくる RND</a><br>
 - <a href=TICK.html>ストップウォッチをつくる TICK</a><br>
 - <a href=LET.html>かずをきおくるする LET</a><br>
+- <a href=INPUT.html>かずでこたえる INPUT</a><br>
 - <a href=FOR.html>くりかえしでかけざん FOR/NEXT</a><br>
 - <a href=BIN.html>2しんすうをたしなむ BIN$</a><br>
 - <a href=PCG.html>オリジナルキャラをつくる PCG</a><br>
