--- a/ja/index.html
+++ b/ja/index.html
@@ -85,6 +85,7 @@ body {
 - <a href=GACHA.html>ガチャシミュレーション</a><br>
 - <a href=VISUAL-KUKU.html>九九ゲーム</a><br>
 - <a href=NUMTYPE.html>すうじタイピングゲーム</a><br>
+- <a href=WHATDAY.html>なんようびうまれ？</a><br>
 </section>
 </div>
 
