--- a/ja/index.html
+++ b/ja/index.html
@@ -77,6 +77,7 @@ body {
 <section>
 じっくりうちこみ コース<br>
 - <a href=KAWAKUDARI.html>かわくだりゲーム</a><br>
+- <a href=JUMP.html>ジャンプゲーム</a><br>
 - <a href=JANKEN.html>ジャンケンゲーム</a><br>
 - <a href=NEKONIKOBAN.html>ねこにこばんゲーム</a><br>
 - <a href=JINKOSIM.html>じんこうシミュレーション</a><br>
