--- a/ja/index.html
+++ b/ja/index.html
@@ -72,6 +72,7 @@ body {
 - <a href=WS2812B.html>WS2812Bでいろあそび</a><br>
 - <a href=KIRAKIRA.html>きらきらしよう WS2812Bつづき1</a><br>
 - <a href=RAINBOW.html>にじをつくろう WS2812Bつづき2</a><br>
+- <a href=LPC810.html>LPC810をあやつろう</a><br>
 </section>
 
 <section>
