mod about WS2812B

--- a/ja/LPC810.html
+++ b/ja/LPC810.html
@@ -49,9 +49,9 @@ table {
 }
 </style>
 <table id=t1954>
-	<tr><td>IchigoJamのOUT1 -</td><td>RESET</td><td rowspan=4>LPC810</td><td>RXD</td><td>- TXD</td></tr>
+	<tr><td></td><td>RESET</td><td rowspan=4>LPC810</td><td>RXD</td><td>- TXD</td></tr>
 	<tr><td>IchigoJamのRXD -</td><td>TXD</td><td>GND</td><td>- GND</td></tr>
-	<tr><td>LEDみじかいほう -</td><td>PIO0_3</td><td>3.3V</td><td>- VCC</td></tr>
+	<tr><td>LEDみじかいほう -</td><td>PIO0_3</td><td>3.3V</td><td>- OUT1</td></tr>
 	<tr><td>LEDながいほう -</td><td>PIO0_2</td><td>ISP</td><td>- OUT2</td></tr>
 </table>
 LPC810にLEDとIchigoJamをつないで、LEDをひからせよう！<br>
