--- a/ja/WS2812B.html
+++ b/ja/WS2812B.html
@@ -12,30 +12,30 @@ WS2812BはコンピューターつきのフルカラーLED。<br>
 <div id="ws2812b-0"></div><script>make15("ws2812b-0", f2s(function() {/*
 10 POKE#700,102,32,240,181,114,182,8,36,36,2,9,25,11,76,128,37,11,120,255,34,34,96,3,39,10,38,43,66,1,208,10,39,3,38,1,63,253,209,0,34
 20 POKE#728,34,96,1,62,253,209,109,8,239,209,2,49,1,56,234,209,98,182,240,189,4,0,1,80
+60 U=USR(#700,0)
 */}))</script>
 まちがえていると、とまってしまうので、SAVEしておこう
 </section>
 
 <section>
-1つ、あかくひからせてみよう！（ばんごうつきのへんすう、はいれつ）
+1つ、あかくひからせてみよう！つぎのぎょうをうちこんだあと、F5でRUN！
 <div id="ws2812b-1"></div><script>make15("ws2812b-1", f2s(function() {/*
-200 [1]=10:U=USR(#700,0)
-RUN
+[1]=10
 */}))</script>
 みどり
 <div id="ws2812b-2"></div><script>make15("ws2812b-2", f2s(function() {/*
-[0]=10:[1]=0:[2]=0:U=USR(#700,0)
+[0]=10:[1]=0:[2]=0
 */}))</script>
-あお（LETコマンドで3つまとめてセットできる！）
+あお（LETコマンドで3つまとめてセットできるよ！）
 <div id="ws2812b-3"></div><script>make15("ws2812b-3", f2s(function() {/*
-LET[0],0,0,10:U=USR(#700,0)
+LET[0],0,0,10
 */}))</script>
 </section>
 
 <section>
-3つまとめてみどりいろにひからせよう
+3つまとめてひからせよう
 <div id="ws2812b-4"></div><script>make15("ws2812b-4", f2s(function() {/*
-R=0:G=10:B=0:LET[0],G,R,B,G,R,B,G,R,B:U=USR(#700,0)
+R=4:G=10:B=2:LET[0],G,R,B,G,R,B,G,R,B
 */}))</script>
 さいだい34コまでひからせることができるよ！
 </section>
