--- a/en/index.html
+++ b/en/index.html
@@ -61,6 +61,7 @@ Ele-making course<br>
 <section>
 Application course<br>
 - <a href=NUMQ.html>Number Quiz</a><br>
+- <a href=JANKEN.html>Janken Game</a><br>
 <!--
 - <a href=KAWAKUDARI.html>かわくだりゲーム</a><br>
 - <a href=JANKEN.html>ジャンケンゲーム</a><br>
