--- a/en/JANKEN.html
+++ b/en/JANKEN.html
@@ -8,9 +8,9 @@
 
 <section>
 Janken is Japanese fighting game using them hand.<br>
-- Gu (stone) beats Choki (scissor).<br>
-- Choki (scissor) beats Pa (paper).<br>
-- Pa (paper) beats Gu (stone).<br>
+- Gu: Sign your hand like a rock, stand no fingers. (Gu wins Choki)<br>
+- Choki: Sign your hand like a scissors, stand 2 fingers. (Choki wins Pa)<br>
+- Pa: Sign your hand like a paper, stand 5 fingers. (Pa wins Gu)<br>
 <br>
 Use randam command with number 3 if you want to decide Gu, Choki or Pa by your computer.
 <div id="list1"></div><script>make15("list1", "?RND(3)")</script>
