mod JANKEN, add ACCHIMUITE

--- a/en/JANKEN.html
+++ b/en/JANKEN.html
@@ -7,10 +7,10 @@
 <h1>Janken Game</h1>
 
 <section>
-Janken is Japanese fighting game using them hand.<br>
-- Gu: Sign your hand like a rock, stand no fingers. (Gu wins Choki)<br>
-- Choki: Sign your hand like a scissors, stand 2 fingers. (Choki wins Pa)<br>
-- Pa: Sign your hand like a paper, stand 5 fingers. (Pa wins Gu)<br>
+Janken is Japanese fighting hand game using three hand signs.<br>
+- Gu: (rock) simply ball your hand up into a fist. (Gu wins Choki)<br>
+- Choki: (scissors) use two fingers to mimic the shape. (Choki wins Pa)<br>
+- Pa: (paper) extend your hand palm down.. (Pa wins Gu)<br>
 <br>
 Use randam command with number 3 if you want to decide Gu, Choki or Pa by your computer.
 <div id="list1"></div><script>make15("list1", "?RND(3)")</script>
@@ -25,8 +25,8 @@ For instance 0 means Gu, 1 means Choki, 2 means Pa.
 40 IF A=2 ?"PA"
 RUN
 */}))</script>
-Try to type RUN or press F5 key repeatly!<br>
-Press F5 key and say your hand to fight after your call "Jan ken"!
+Try to type RUN or press F5 key repeatedly!<br>
+Press F5 key and say your hand sign to fight after your call "Jan ken"!
 </section>
 
 <section>
@@ -45,8 +45,8 @@ Try to judge by computer.
 <section>
 <b>Let's try!</b><br>
 1. Try to fight your friend's computer program!<br>
-2. Try to make the weakest computer!<br>
-3. Try to make Janken game with 3 players, you and 2 computers!<br>
+2. Try to create the weakest computer!<br>
+3. Try to create Janken game with 3 players, you and 2 computers!<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://github.com/IchigoJam/print/">IchigoJam print</a> https://github.com/IchigoJam/print/ 
