--- a/ja/FLLOPY.html
+++ b/ja/FLLOPY.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>FLOPY BIRD </title>
+<title>FLLOPY BIRD</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>FLOPY BIRD - IchigoJam</h1>
+<h1>FLLOPY BIRD - IchigoJam</h1>
 
 <section>
-FLOPY BIRDを作ってみよう
+FLLOPY BIRDを作ってみよう
 </section>
 
 <section>
