--- a/ja/index.html
+++ b/ja/index.html
@@ -80,6 +80,7 @@ body {
 - <a href=KAWAKUDARI.html>かわくだりゲーム</a><br>
 - <a href=JUMP.html>ジャンプゲーム</a><br>
 - <a href=JANKEN.html>ジャンケンゲーム</a><br>
+- <a href=ACCHIMUITE.html>あっちむいてほい</a><br>
 - <a href=NEKONIKOBAN.html>ねこにこばんゲーム</a><br>
 - <a href=JINKOSIM.html>じんこうシミュレーション</a><br>
 - <a href=TOUCHTYPING.html>タッチタイピング</a><br>
@@ -88,6 +89,7 @@ body {
 - <a href=VISUAL-KUKU.html>九九ゲーム</a><br>
 - <a href=NUMTYPE.html>すうじタイピングゲーム</a><br>
 - <a href=WHATDAY.html>なんようびうまれ？</a><br>
+- <a href=FLOPPY.html>FLOPPY BIRD GAME</a><br>
 </section>
 </div>
 
