--- a/en/WAIT.html
+++ b/en/WAIT.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>じかんをあやつるWAIT（ウエイト） - IchigoJam</title>
+<title>Operate the Time / WAIT - IchigoJam</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>じかんをあやつるWAIT（ウエイト）</h1>
+<h1>Operate the Time / WAIT</h1>
 
 <section>
-IchigoJam に「まて」をしてみよう。<br>
-がめんで、てんめつする、しかくい「カーソル」はキーボードがつかえるしるし。
+Let's do "wait" to a IchigoJam.<br>
+A blinking square cursor on the screen is a mark that the keyboard can use.
 <div id="wait1-1"></div><script>make15("wait1-1", "WAIT60")</script>
-このカーソルがちょっとのあいだ、きえたの、わかりましたか？もういっかいためしてみよう。
+Can you see that this cursor has disappeared for a short time? Let's try again.
 </section>
 
 <section>
-WAIT（ウエイト）のうしろにつくかずで、「まて」のながさをかえられます。<br>
-※1びょう=60
+If you change the number behind "WAIT", the length of "wait" will be able to change.<br>
+※1 second = 60
 <div id="wait1-2"></div><script>make15("wait1-2", "WAIT120")</script>
-カーソルがかえってくるまでのじかん、さっきよりながくなりました。
+The cursor has disappeared longer than before.
+The time it takes for the cursor to return is longer than before.
 </section>
 
 <section>
-LEDをひからせて、じどうてきにけしましょう。
+Light the LED, and turn off automatically.
 <div id="wait1-3"></div><script>make15("wait1-3", "LED1:WAIT120:LED0")</script>
-コロン「:」（セミコロン「;」とまちがえやすい）をつかって、コマンドをれんけつ。LED1で光らせて、WAIT120でまって、LED0でけします。
+Use the colon ':'(easy to mistake semicolon ';') to concatenate commands.<br>
+"LED1" to light a LED, "WAIT120" to wait 2 seconds, "LED0" to turn off a LED.
+Light with "LED1", wait with "WAIT120", turn off with"LED0".
 </section>
 
 <section>
-チカっとひかるLED。
+It lights the LED a bit.
 <div id="wait1-5"></div><script>make15("wait1-5", "LED1:WAIT3:LED0")</script>
-WAITのかずをかえるとひかりかたがかわります。
+If you change the number for "WAIT", changes the light pattern of the LED.
 </section>
 
 <section>
-LEDは2どひかる。
+The LED lights two times..
 <div id="wait1-6"></div><script>make15("wait1-6", "LED1:WAIT3:LED0:WAIT3:LED1:WAIT3:LED0")</script>
-コロン「:」でどんどんつなげられます。
+You can connect more and more with the colon ":".
 </section>
 
 <section>
-<b>やってみよう！</b><br>
-1. 10びょう「まて」をさせてみよう<br>
-2. LEDを5びょうつけて、けそう<br>
-3. WAIT10000とやって、とちゅうで[ESC]キーをおしてみよう<br>
-4. ながくひかったあと、チカっとひからせよう<br>
-5. かっこいいパターンでひからせよう<br>
+<b>Try it!</b><br>
+1. Let's do "WAIT" for 10 seconds<br>
+2. Light the LED for 5 seconds and turn it off<br>
+3. After typing "WAIT 10000", in the middle, press the ESCAPE key<br>
+4. Light a bit after lighting for a long time
+5. Try to light the LED with a cool pattern<br>
 </section>
 
-<div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
+<div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
 <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a></div>
 </body></html>
