--- a/en/index.html
+++ b/en/index.html
@@ -25,36 +25,26 @@ body {
 <section>
 Programming course<br>
 - <a href=LED.html>Light up / LED</a><br>
-<!--
-- <a href=WAIT.html>Control the time, WAIT</a><br>
-- <a href=RUN-LIST.html>プログラムのきおく RUN/LIST</a><br>
-- <a href=SAVE-LOAD-NEW.html>プログラムのほぞん SAVE/LOAD/NEW</a><br>
-- <a href=GOTO.html>よるのしんごうをつくる GOTO</a><br>
-- <a href=BTN.html>おもいをつたえる BTN</a><br>
-- <a href=IF.html>はんだんさせる IF</a><br>
--->
+- <a href=WAIT.html>Operate the Time / WAIT</a><br>
+- <a href=INPUT.html>Answer in numbers / INPUT</a><br>
+- <a href=PRINT.html>Calculate number / PRINT</a><br>
+- <a href=LOCATE.html>Operate the place / LOCATE</a><br>
+- <a href=IF.html>Let it judge / IF</a><br>
+- <a href=GOTO.html>Make a night signal / GOTO</a><br>
+- <a href=SAVE-LOAD-NEW.html>Save a Program / SAVE-LOAD-NEW</a><br>
+- <a href=RUN-LIST.html>Memory of program / RUN/LIST</a><br>
 - <a href=BEEP.html>Make Sounds / BEEP</a><br>
 - <a href=PLAY.html>Compose Music / PLAY</a><br>
 - <a href=FOR.html>Multiplication by loop / FOR/NEXT</a><br>
+</section>
 
-<!--
-- <a href=PRINT.html>けいさんさせる PRINT</a><br>
-- <a href=LOCATE.html>ばしょをあやつる LOCATE</a><br>
-- <a href=RND.html>サイコロをつくる RND</a><br>
-- <a href=TICK.html>ストップウォッチをつくる TICK</a><br>
-- <a href=LET.html>かずをきおくるする LET</a><br>
-- <a href=BIN.html>2しんすうをたしなむ BIN$</a><br>
--->
+<section>
+Mathematics course<br>
+- <a href=ADD.html>Add from 1 to 100</a><br>
 </section>
 
 <section>
 Ele-making course<br>
-<!--
-- <a href=OUT.html>はじめてのかいろ OUT</a><br>
-- <a href=SIGNAL.html>ほこうしゃしんごうをつくる</a><br>
-- <a href=PWM.html>サーボをあやつる PWM</a><br>
-- <a href=FLOWERLED.html>おはなLEDでルーレットゲーム</a><br>
--->
 - <a href=CHAT.html>Let's chat on a network!</a><br>
 </section>
 
@@ -62,15 +52,9 @@ Ele-making course<br>
 Application course<br>
 - <a href=NUMQ.html>Number Quiz</a><br>
 - <a href=JANKEN.html>Janken Game</a><br>
-<!--
-- <a href=KAWAKUDARI.html>かわくだりゲーム</a><br>
-- <a href=JANKEN.html>ジャンケンゲーム</a><br>
-- <a href=NEKONIKOBAN.html>ねこにこばんゲーム</a><br>
-- <a href=JINKOSIM.html>じんこうシミュレーション</a><br>
-- <a href=TOUCHTYPING.html>タッチタイピング</a><br>
-- <a href=NINEPUZZLE.html>ナインパズル</a><br>
-- <a href=VISUAL-KUKU.html>九九ゲーム</a><br>
--->
+- <a href=KAWAKUDARI.html>Kawakudari Game</a><br>
+- <a href=TOUCHTYPING.html>Touch Typing</a><br>
+- <a href=NUMTYPE.html>Number Typing Game</a><br>
 </section>
 
 </div>
