add sakura.io print

--- a/ja/index.html
+++ b/ja/index.html
@@ -37,7 +37,7 @@ body {
 - <a href=LOCATE.html>ばしょをあやつる LOCATE</a><br>
 - <a href=RND.html>サイコロをつくる RND</a><br>
 - <a href=TICK.html>ストップウォッチをつくる TICK</a><br>
-- <a href=LET.html>かずをきおくるする LET</a><br>
+- <a href=LET.html>かずをきおくする LET</a><br>
 - <a href=INPUT.html>かずでこたえる INPUT</a><br>
 - <a href=FOR.html>くりかえしでかけざん FOR/NEXT</a><br>
 - <a href=BIN.html>2しんすうをたしなむ BIN$</a><br>
@@ -74,6 +74,7 @@ body {
 - <a href=KIRAKIRA.html>きらきらしよう WS2812Bつづき1</a><br>
 - <a href=RAINBOW.html>にじをつくろう WS2812Bつづき2</a><br>
 - <a href=LPC810.html>LPC810をあやつろう</a><br>
+- <a href=SAKURAIO.html>sakura.ioでネットにつなごう</a><br>
 </section>
 
 <section>
