--- a/ja/SAKURAIO.html
+++ b/ja/SAKURAIO.html
@@ -32,16 +32,18 @@ sakura.ioのLEDがてんめつしはじめ、1ぷんほどまつと、1かいて
 
 <section>
 ネットへデータをそうしんしよう
-<div id="sakuraio-1"></div><script>make15("sakuraio-1", `800 LET[0],2593,19457,N,0,0,0,N^102:?I2CR(79,#800,13,#820,3):RTN
+<div id="sakuraio-1"></div><script>make15("sakuraio-1", `800 LET[0],2593,19457,N,0,0,0,N>>8^N^102:?I2CR(79,#800,13,#820,3):RTN
 N=15:GSB800`)</script>
-0とひょうじされればせつぞくOK。PCやスマホで15がとどいていることをかくにんしよう。Nに0-255までおくりたいかずをいれて、GSB800！
-<div id="sakuraio-2"></div><script>make15("sakuraio-2", "N=1:GSB800")</script>
+0とひょうじされればせつぞくOK。PCやスマホで15がとどいていることをかくにんしよう。Nにおくりたいかずをいれて、GSB800！
+</section>
+
+<section>
 ネットからデータをじゅしんしよう<br>
-ネットからせつぞくしたsakura.ioへ0-255のかずをおくっておきます。
+ネットからせつぞくしたsakura.ioへかずをおくっておきます。
 <div id="sakuraio-3"></div><script>make15("sakuraio-3", `810 LET[0],48,48:?I2CR(79,#800,3,#820,22):F=[16]!=5:N=[18]:RTN
 GSB810:?N`)</script>
 おくったかず、うけとれましたか？<br>
-あたらしいデータをうけとれたときに、へんすうFが1になることをつかって、データをうけとったらBEEPでおとをならす、おんがくIoTができます。
+あたらしいデータをうけとれたときに、へんすうFが1になることをつかって、データをうけとったらBEEPでおとをならす、ネットにつながるがっきのできあがり！
 <div id="sakuraio-4"></div><script>make15("sakuraio-4", `10 GSB810:IF F=0 CONT
 20 BEEP N
 30 GOTO 10`)</script>
@@ -52,7 +54,8 @@ GSB810:?N`)</script>
 1. ボタン(BTN)がおされたら、ネットでつたえよう<br>
 2. ネットからさいせいするおんがく(PLAY)をえらんでみよう<br>
 3. ゲームのスコアをネットにそうしんしよう<br>
-4. おおきなかずをおくれるようかいぞうしてみよう、800ぎょうNのすぐうしろの0をN>>8、N^102をN>>8N^102にへんこう<br>
+4. ドアがあいたらネットにそうしんするモノをつくってみよう<br>
+5. スマホからコントロールするロボットをつくってみよう<br>
 </section>
 
 <div id="credit">CC BY IchigoJam <a href='http://ichigojam.net/'>http://ichigojam.net/</a></div>
