--- a/ja/index.html
+++ b/ja/index.html
@@ -66,6 +66,8 @@ body {
 - <a href=OUT.html>はじめてのかいろ OUT</a><br>
 - <a href=SIGNAL.html>ほこうしゃしんごうをつくる</a><br>
 - <a href=PWM.html>サーボをあやつる PWM</a><br>
+- <a href=IN.html>0か1かのにゅうりょく IN（イン）</a><br>
+- <a href=ANA.html>りょうのにゅうりょく ANA（アナ）</a><br>
 - <a href=CHAT.html>2だいつないでチャットしよう</a><br>
 - <a href=CHOCO.html>Ichigoチョコでめいろだっしゅつ</a><br>
 - <a href=FLOWERLED.html>おはなLEDでルーレットゲーム</a><br>
