add English prints

--- a/en/LED.html
+++ b/en/LED.html
@@ -8,9 +8,9 @@
 
 <section>
 <img src=key-enter.png height=70 align=right>
-Switch on your IchigoJam. Type "LED1" from your keyboard. And hit the ENTER key. (ENTER key is located right side and big key)
+Turn on the switch of your IchigoJam. Type "LED1" from your keyboard. And press the ENTER key. (ENTER key is located on the right side and big key)
 <div id="list1"></div><script>make15("list1", "LED1")</script>
-It's success if your LED of IchigoJam lighted up and you got "OK" message.
+It is a success if your LED of IchigoJam lighted up and you got "OK" message.
 </section>
 
 <section>
@@ -23,7 +23,7 @@ Type "LED0" to light off.
 SPACE key is big and located center and bottom of your keyboard.<br>
 Type "LED 1" and the hit the ENTER key.
 <div id="list3"></div><script>make15("list3", "LED 1")</script>
-You can choice add a space or not.
+It is OK either way, whether the space is there or not. 
 </section>
 
 <section>
@@ -40,14 +40,14 @@ Let's type "ABD" without hitting the ENTER.<br>
 Once hit the Backspace key.<br>
 The Backspace key located at right and upper side.
 <div id="red-3"></div><script>make15("red-3", "AB\x85")</script>
-You can remove a character! You don't worry about miss typing.
+You can delete the character! You don't worry about miss typing.
 </section>
 
 <section>
 <b>Try it!</b><br>
 1. Type "ABCDEFG"<br>
 2. Try to light off the LED<br>
-3. Try to light up and light off repaidly<br>
+3. Try to light up and light off rapidly<br>
 4. Type "BEEP" and hit the ENTER<br>
 5. Type "CLS" and hit the ENTER<br>
 </section>
