--- a/en/WAIT.html
+++ b/en/WAIT.html
@@ -4,13 +4,13 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>Operate the Time / WAIT</h1>
+<h1>Control the Time / WAIT</h1>
 
 <section>
 Let's do "wait" to a IchigoJam.<br>
-A blinking square cursor on the screen is a mark that the keyboard can use.
+A blinking square cursor on the screen means that the keyboard is ready for use.
 <div id="wait1-1"></div><script>make15("wait1-1", "WAIT60")</script>
-Can you see that this cursor has disappeared for a short time? Let's try again.
+Did you see that this cursor has disappeared for a short time? Let's try again.
 </section>
 
 <section>
