--- a/en/index.html
+++ b/en/index.html
@@ -36,11 +36,21 @@ Programming course<br>
 - <a href=BEEP.html>Make Sounds / BEEP</a><br>
 - <a href=PLAY.html>Compose Music / PLAY</a><br>
 - <a href=FOR.html>Multiplication by loop / FOR/NEXT</a><br>
+- <a href=BIN.html>Make a binary number / BIN$</a><br>
+- <a href=LET.html>Memorize the numbers / LET</a><br>
+- <a href=LRUN.html>Connect the programs / LRUN</a><br>
+- <a href=BTN.html>Convey thoughts / BTN</a><br>
+- <a href=RND.html>Make a dice / RND</a><br>
+- <a href=PCG.html>Make an Original Character / PCG</a><br>
+- <a href=TICK.html>Make a stopwatch / TICK</a><br>
 </section>
 
 <section>
 Mathematics course<br>
 - <a href=ADD.html>Add from 1 to 100</a><br>
+- <a href=MATH1.html>Looking for a common multiple</a><br>
+- <a href=MATH2.html>Looking for common divisor</a><br>
+- <a href=MATH3.html>Rounding off</a><br>
 </section>
 
 <section>
@@ -55,6 +65,12 @@ Application course<br>
 - <a href=KAWAKUDARI.html>Kawakudari Game</a><br>
 - <a href=TOUCHTYPING.html>Touch Typing</a><br>
 - <a href=NUMTYPE.html>Number Typing Game</a><br>
+- <a href=JUMP.html>Jump Game</a><br>
+- <a href=NEKONIKOBAN.html>Nekonikoban Game</a><br>
+- <a href=NINEPUZZLE.html>Nine Puzzle</a><br>
+- <a href=JINKOSIM.html>Population simulation</a><br>
+- <a href=WHATDAY.html>What day of the week were you born?</a><br>
+- <a href=GACHA.html>Gacha simulation</a><br>
 </section>
 
 </div>
