--- a/ja/index.html
+++ b/ja/index.html
@@ -75,6 +75,7 @@ body {
 - <a href=WS2812B.html>WS2812Bでいろあそび</a><br>
 - <a href=KIRAKIRA.html>きらきらしよう WS2812Bつづき1</a><br>
 - <a href=RAINBOW.html>にじをつくろう WS2812Bつづき2</a><br>
+- <a href=COLOR1616.html>カラフルドットえをかこう WS2812B 16x16</a><br>
 - <a href=LPC810.html>LPC810をあやつろう</a><br>
 - <a href=SAKURAIO.html>sakura.ioでネットにつなごう</a><br>
 </section>
