--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@ body {
 <h1>IchigoJam print</h1>
 
 <div id="main">
-- <a href=ja/index.html>IchigoJamプリント (日本語/Japanese)</a><br>
-- <a href=en/index.html>IchigoJam print (in English)</a><br>
+- <a href=ja/index.html>IchigoJamプリント (Japanese / 日本語)</a><br>
+- <a href=en/index.html>IchigoJam print (English)</a><br>
+- <a href=rw/index.html>IchigoJam print (Rwandan / Kinyarwanda)</a><br>
 </div>
 
 <div id="credit"><a href=https://github.com/IchigoJam/print>CC BY on GitHub</a> <a href="https://ichigojam.github.io/print/en/">IchigoJam print</a> https://ichigojam.github.io/print/en/ <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
