--- a/rw/index.html
+++ b/rw/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="rw"><head><meta charset="utf-8">
+<!DOCTYPE html><html><head><meta charset="utf-8">
 <title>IchigoJam print</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
@@ -23,70 +23,61 @@ body {
 
 <div id="main">
 <section>
-Programming course<br>
-<!--
-- <a href=LED.html>Light up / LED</a><br>
+Amasomo ya porogaramu<br>
+- <a href=LED.html>Gucana itara / LED</a><br>
 - <a href=WAIT.html>Operate the Time / WAIT</a><br>
-- <a href=INPUT.html>Answer in numbers / INPUT</a><br>
-- <a href=PRINT.html>Calculate number / PRINT</a><br>
+- <a href=INPUT.html>Subiza imibare / INPUT</a><br>
+- <a href=PRINT.html>Kora imibare / PRINT</a><br>
 - <a href=LOCATE.html>Operate the place / LOCATE</a><br>
-- <a href=IF.html>Let it judge / IF</a><br>
-- <a href=GOTO.html>Make a night signal / GOTO</a><br>
-- <a href=SAVE-LOAD-NEW.html>Save a Program / SAVE-LOAD-NEW</a><br>
-- <a href=RUN-LIST.html>Memory of program / RUN/LIST</a><br>
--->
-- <a href=BEEP.html>Kora Ijwi / BEEP</a><br>
-<!--
-- <a href=PLAY.html>Compose Music / PLAY</a><br>
+- <a href=IF.html>Guca urubanza / IF</a><br>
+- <a href=GOTO.html>Kora amatara ya n'ijoro / GOTO</a><br>
+- <a href=SAVE-LOAD-NEW.html>Bika porogaramu / SAVE-LOAD-NEW</a><br>
+- <a href=RUN-LIST.html>Ibuka porogarmu / RUN/LIST</a><br>
+- <a href=BEEP.html>Kora ijwi / BEEP</a><br>
+- <a href=PLAY.html>Andika umuzika / PLAY</a><br>
 - <a href=FOR.html>Multiplication by loop / FOR/NEXT</a><br>
-- <a href=BIN.html>Make a binary number / BIN$</a><br>
+- <a href=BIN.html>Kora imibare ya Zeru na Rimwe/ BIN$</a><br>
 - <a href=LET.html>Memorize the numbers / LET</a><br>
-- <a href=LRUN.html>Connect the programs / LRUN</a><br>
-- <a href=BTN.html>Convey thoughts / BTN</a><br>
-- <a href=RND.html>Make a dice / RND</a><br>
-- <a href=PCG.html>Make an Original Character / PCG</a><br>
-- <a href=TICK.html>Make a stopwatch / TICK</a><br>
--->
+- <a href=LRUN.html>Guhuza amaporogaramu / LRUN</a><br>
+- <a href=BTN.html>Bwira mudasobwa icyo utekereza / BTN</a><br>
+- <a href=RND.html>Kora Rudo(duce) / RND</a><br>
+- <a href=PCG.html>Kora ikimenyetso / PCG</a><br>
+- <a href=TICK.html>Kora isaha ibara igihe/ TICK</a><br>
 </section>
 
 <section>
-Mathematics course<br>
-- <a href=ADD.html>Guteranya kuva kuri 1 kugera ku 100</a><br>
-- <a href=MATH1.html>Gukuba(Imibare)</a><br>
-- <a href=MATH2.html>Kugabanya(Imibare)</a><br>
-<!--
+Ammasomo y'imibare<br>
+- <a href=GUTERANYA.html>Guteranya kuva kuri 1 kugera ku 100</a><br>
+- <a href=MATH1.html>Reba uko bakuba</a><br>
+- <a href=MATH2.html>Reba uko kugabanya</a><br>
 - <a href=MATH3.html>Rounding off</a><br>
--->
 </section>
 
-<!--
 <section>
 Ele-making course<br>
-- <a href=CHAT.html>Let's chat on a network!</a><br>
+- <a href=CHAT.html>Reka tuganirire kumpuzamikorere!</a><br>
 </section>
 
 <section>
-Application course<br>
-- <a href=NUMQ.html>Number Quiz</a><br>
-- <a href=JANKEN.html>Janken Game</a><br>
-- <a href=KAWAKUDARI.html>Kawakudari Game</a><br>
-- <a href=TOUCHTYPING.html>Touch Typing</a><br>
-- <a href=NUMTYPE.html>Number Typing Game</a><br>
-- <a href=JUMP.html>Jump Game</a><br>
-- <a href=NEKONIKOBAN.html>Nekonikoban Game</a><br>
+Amasom ya apurikasiyo<br>
+- <a href=NUMQ.html>Ibarwa ry;imibare</a><br>
+- <a href=JANKEN.html>Mukino wa Janken</a><br>
+- <a href=KAWAKUDARI.html>Umukino wa Kawakudari</a><br>
+- <a href=TOUCHTYPING.html>Kwandika vuba vuba</a><br>
+- <a href=NUMTYPE.html>Umukino wo kwandika imibare</a><br>
+- <a href=JUMP.html>Umukino wo gusimbuka</a><br>
+- <a href=NEKONIKOBAN.html>Umukino wa Nekonikoban</a><br>
 - <a href=NINEPUZZLE.html>Nine Puzzle</a><br>
 - <a href=JINKOSIM.html>Population simulation</a><br>
-- <a href=WHATDAY.html>What day of the week were you born?</a><br>
+- <a href=WHATDAY.html>Ni uwuhe munsi wavutseho?</a><br>
 - <a href=GACHA.html>Gacha simulation</a><br>
 </section>
--->
 
 </div>
 
 <div id="credit">
-<a href="https://ichigojam.github.io/print/rw/">IchigoJam print @rw</a> https://ichigojam.github.io/print/rw/ <br>
-English: <a href="https://ichigojam.github.io/print/en/">IchigoJam print @en</a> https://ichigojam.github.io/print/en/ <br>
-Japanese: <a href="https://ichigojam.github.io/print/ja/">IchigoJam print @ja</a> https://ichigojam.github.io/print/ja/ <br>
+<a href="https://ichigojam.github.io/print/rw/">IchigoJam print @en</a> https://ichigojam.github.io/print/rw/ <br>
+日本語: <a href="https://ichigojam.github.io/print/ja/">IchigoJam print @ja</a> https://ichigojam.github.io/print/ja/ <br>
 licence: <a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
 Src: <a href=https://github.com/IchigoJam/print>IchigoJam print on GitHub</a><br>
 </div>
