--- a/rw/index.html
+++ b/rw/index.html
@@ -47,7 +47,7 @@ Amasomo ya porogaramu<br>
 
 <section>
 Ammasomo y'imibare<br>
-- <a href=GUTERANYA.html>Guteranya kuva kuri 1 kugera ku 100</a><br>
+- <a href=ADD.html>Guteranya kuva kuri 1 kugera ku 100</a><br>
 - <a href=MATH1.html>Reba uko bakuba</a><br>
 - <a href=MATH2.html>Reba uko kugabanya</a><br>
 - <a href=MATH3.html>Rounding off</a><br>
