--- a/ja/index.html
+++ b/ja/index.html
@@ -53,6 +53,7 @@ body {
 - <a href=MATH1.html#kana>こうばいすうさがし</a>（<a href=MATH1.html>公倍数さがし</a>）<br>
 - <a href=MATH2.html#kana>こうやくすうさがし</a>（<a href=MATH2.html>公約数さがし</a>）<br>
 - <a href=MATH3.html#kana>ししゃごにゅう</a>（<a href=MATH3.html>四捨五入</a>）<br>
+- <a href=FRACTION.html#kana>ぶんすうのたしざん</a>（<a href=FRACTION.html>分数の足し算</a>）<br>
 - <a href=FIB.html>フィボナッチすうれつ</a><br>
 </section>
 
